2.0.4

Fixed -  Upgrade detect bug where the routine couldn't distinguish between 32 and 64 bit Windows versions.
Fixed -  Status Window header size wasn't being set by CSS for some reason so the size change is now set by QtDesigner.
Fixed -  Configuration updater wasn't running, when configuration change detected.
Update - Added timer so the upgrade detect waits five seconds before running this allows time for the main UI to appear.

2.0.3

Fixed -  Error occured when importing and no data save path was found, now defaults to home folder if missing.
Fixed -  Error where data translator wasn't initialised when instruments were changed.
Fixed -  Issue where you could save instruments attributes data that wasn't compliant

Update - Added pop up box when instrument attributes are changed but dialog is cancelled.
Update - When adding a parameter or choice if no responseValue to received then the parameter or choice set is displayed.